<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C4FF98"
    tools:context="._8puzzle_interactive">

    <TextView
        android:id="@+id/current_state_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/current_state_label"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/final_state_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:text="@string/Final_State_Label"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/move_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/moves_label"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/current_state_text_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/current_state"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_state_label" />

    <TextView
        android:id="@+id/puzzle_move_counter"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#FFFFFF"
        android:text="@string/count"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/move_label" />

    <TextView
        android:id="@+id/final_state_textarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:background="#FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/final_state"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/final_state_label" />

    <TextView
        android:id="@+id/puzzle_message"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="16dp"
        android:text="@string/message"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FF3737"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/final_state_textarea" />

    <LinearLayout
        android:id="@+id/puzzle_moves"
        android:layout_width="149dp"
        android:layout_height="612dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_state_text_area"></LinearLayout>

    <LinearLayout
        android:id="@+id/benchVbox"
        android:layout_width="141dp"
        android:layout_height="226dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="18dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/puzzle_moves"
        app:layout_constraintTop_toBottomOf="@+id/puzzle_message">

        <Button
            android:id="@+id/puzzleResetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/puzzle_reset_button_text"
            android:textColor="#000000"
            tools:backgroundTint="@android:color/darker_gray" />

        <Button
            android:id="@+id/puzzleSolveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/solveButtonString"
            android:textColor="#000000"
            tools:backgroundTint="@android:color/darker_gray" />

        <Button
            android:id="@+id/puzzleNextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/nextButtonString"
            android:textColor="#000000"
            tools:backgroundTint="@android:color/darker_gray"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/BenchmarksLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/benchmarksLabel_puzzle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>