<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF5959"
    tools:context="._8puzzle">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/PuzzleTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="164dp"
        android:layout_height="152dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/puzzleDescription"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#212121"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="194dp"
        android:layout_height="224dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/PuzzleRules"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#212121"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="_interactive"
        android:text="@string/PuzzleButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="136dp"
        android:layout_height="144dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@mipmap/puzzlestart_foreground"
        android:contentDescription="@string/todo3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="138dp"
        android:layout_height="133dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@mipmap/puzzleend_foreground"
        android:contentDescription="@string/todo4" />
</androidx.constraintlayout.widget.ConstraintLayout>